fixes to right gap

--- a/style.css
+++ b/style.css
@@ -641,8 +641,12 @@ img{
     /* right section */
     .main{
         display: flex;
+        width: 100%;
         flex-direction: column;
         margin: 0;
+    }
+    .right-section{
+        width: auto;
     }
     .project-container .inside-container{
         display: flex;
